@@ -2,6 +2,6 @@ root := ..
 subdirs := 
 pre-targets := 
 bin := yes
-targets := cipherraw ciphertest ciphertest2 lexdump mkfastmod mod2vpl vpl2mod stepdump step2vpl mod2zmod modwrite addvs
+targets := cipherraw ciphertest ciphertest2 lexdump mkfastmod mod2vpl vpl2mod stepdump step2vpl mod2zmod modwrite addvs addld
 include ${root}/Makefile.cfg
 
