@@ -1,6 +1,9 @@
 API ChangeLog	(see the ChangeLog in each 'apps' directory for
 		app specific changes
 
+10-Dec-2000     Chris Little <chrislit@crosswire.org>
+	Added addld utility for adding single entries to LD modules
+	
 09-Dec-2000     Chris Little <chrislit@crosswire.org>
         Added addvs utility for adding single verses to modules
 	Added Diatheke (and CGI/Tcl/PQA frontends to it) to source
